starting to make it work in java17